--- a/public/css/hope-ui.css
+++ b/public/css/hope-ui.css
@@ -107,7 +107,6 @@ hr {
     scroll-behavior: smooth;
   }
 }
-
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -116,10 +115,14 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  /* background-color: var(--bs-body-bg); */ 
+  background-image: url("{{ asset(env('APP_LOGO')) }}");
+  background-size: cover; /* Sesuaikan dengan kebutuhan */
+  background-repeat: no-repeat; /* Sesuaikan dengan kebutuhan */
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+
 
 hr {
   margin: 1rem 0;
